update notebook yolo

--- a/artifacts/yolov3_example.ipynb
+++ b/artifacts/yolov3_example.ipynb
@@ -86,7 +86,7 @@
     "tags": []
    },
    "source": [
-    "Let us load COCO dataset classes and the model with it's pre-trained weights on the same dataset."
+    "Let us load COCO dataset classes and the model with its pre-trained weights on the same dataset."
    ]
   },
   {
